src/site/assets/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root{
  --plyr-color-main: #404d59;
}

.base-container{
  color: #404d59;
}
.blogs-header{
  background-image: url(/assets/images/large-wallpaper-white.jpg);
  background-position: center;
}
.blogs-header.developments{
  background-image: url(/assets/images/devs-header-tall.png);
  background-position: center;
}
.blogs-header.unburdened{
  background-image: url(/assets/images/unburdened-banner.jpg);
  background-position: center;
}
.blogs-header.practice-partnership{
  background-image: url(/assets/images/practice-of-partnerships-background.jpg);
  background-position: left;
  background-size: cover;
}
.blog-banner{
  margin-top: 65px;
}
@media screen and (min-width: 480px){
  .blog-banner{
    margin-top:92px;
  }
}
@media screen and (min-width: 600px){
  .blog-banner{
    margin-top:111px;
  }
}
@media screen and (min-width: 768px){
  .blog-banner{
    margin-top:115px;
  }
}
@media screen and (min-width: 1024px){
  .blog-banner{
    margin-top:128px;
  }
}
.devs-banner, .digital-banner{
  background-image: url('/assets/images/banner-left.png');
  background-position: left;
  background-repeat: no-repeat;
  background-size: contain;
}
.digital-banner{
  background-image: url('/assets/images/digital-banner.jpg');
  background-position: right;
  background-size: cover;
}
.post-body{
  color: #404d59;
}
.prose a{
  color: #1e7ab3;
  font-weight: bold;
  text-decoration: underline;
}
.prose img{
  margin-bottom: 0px;
}
.prose a:hover{
  text-decoration: none;
}
.prose figcaption{
  font-size: .8rem;
  @apply p-4 bg-daiLightGray mt-0 text-center
}
.prose figure img{
  @apply w-full
}
.prose .kg-width-full{
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.prose iframe{
  aspect-ratio: 16 / 9;
	height: 100% !important;
	width: 100% !important;
}
div.desc iframe.pop-iframe{
  height: 140px !important;
  aspect-ratio: 4/3;
}
.prose blockquote{
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  color: white;
  background-image: url(/assets/images/quote-background.jpg);
  background-size: cover;
  padding: 4rem;
  padding-left: 8rem;
  font-style: normal;
}
@media screen and (min-width: 1460px) {
  .prose blockquote{
    padding-left: 10rem;
  }
}
@media screen and (min-width: 2000px) {
  .prose blockquote{
    padding-left: 11rem;
  }
}
.prose blockquote em{
  display: block;
  font-style: normal;
  padding-left: 10%;
}
.prose blockquote:after{
  content: "";
  position: absolute;
  background-image: url(/assets/images/new-quote.svg);
  background-size: 100%;
  background-position: center;
  background-repeat: no-repeat;
  top: 35%;
  left: 5%;
  @apply h-12 w-12 md:h-14 md:w-14 lg:w-16 lg:h-16
}
/* Ripple effect */
.daiButtons {
  background-position: center;
  transition: background 0.4s, box-shadow 0.2s;
  border: none;
  border-radius: 4px;
  padding: 12px 18px;
  font-size: 16px;
  cursor: pointer;
  color: white;
  background-color: #1e7ab3;
  box-shadow: 0 0 4px #999;
  outline: none;
  margin-right: 1rem;
}
.daiButtons:hover{
  background-color: #1f8acc;
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0,0,0,.12);
}

/* SEARCH BOX */
.aa-input-icon {
  height: 16px;
  width: 16px;
  position: absolute;
  top: 50%;
  right: 1px;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  fill: #e4e4e4; }
.aa-dropdown-menu {
  background-color: #fff;
  border: 1px solid rgba(228, 228, 228, 0.6);
  min-width: 300px;
  margin-top: 10px;
  box-sizing: border-box; 
  -moz-box-shadow:    0px 0px 5px 1px rgba(#d3e3f0, 0.35);
  -webkit-box-shadow: 0px 0px 5px 1px rgba(#d3e3f0, 0.35);
  box-shadow:         0px 0px 5px 1px rgba(#d3e3f0, 0.35);
}
.blog-search span.algolia-autocomplete{
  display: block !important;
}
.aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button, .aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
  display: none; 
}
.aa-dropdown-menu {
  background-color: rgba(255, 255, 255, 0.9); ;
  border: 1px solid rgba(228, 228, 228, 0.6); 
  border-radius: 4px;
  padding: 10px;
  margin-top: 10px;
  box-sizing: border-box; 
  -moz-box-shadow:    0px 0px 5px 1px rgba(black, 0.35);
  -webkit-box-shadow: 0px 0px 5px 1px rgba(black, 0.35);
  box-shadow:         0px 0px 5px 1px rgba(black, 0.35);
}
.aa-suggestion{
  padding: 6px 4px;
  border-bottom: 1px dashed #e4e5e6;
  border-radius: 4px;
}
.aa-suggestion.aa-cursor{
  background-color: rgba(30, 122, 179, .1);
}
.aa-suggestion+.aa-cursor{
  background-color: rgba(30, 122, 179, .1);
}
.ais-Highlight{
  font-weight: bold;
  font-style: normal;
}
.aa-suggestion .publication{
  clear: left;
  width: auto;
  @apply rounded-full bg-daiBlue p-1 mt-2 text-xs block pl-4
}
/* // SEARCH ALGOLIA
.aa-input-container, input.aa-input-search{
  width:92%;
  @include responsive(tinyish-screens){
    width: 93%;
  }
  @include responsive(small-screens){
    width: 95%;
  }
  @include responsive(wide-screens){
    width: 92%;
  }
}
.aa-dropdown-menu{
  width: 92%;
  @include responsive(tinyish-screens){
    width: 93%;
  }
  @include responsive(small-screens){
    width: 95%;
  }
  @include responsive(wide-screens){
    width: 110%;
  }
}
.aa-input-container {
  display: block;
  position: relative; 
}
span.algolia-autocomplete{
  display: block !important;
}
.aa-input-search {
  // width: 300px;
  border: 1px solid rgba(228, 228, 228, 0.6);
  padding: 9px 28px 9px 12px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none; 
}
  .aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button, .aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
    display: none; 
  }
  .aa-input-search{
    outline: none;
  }
.aa-input-icon {
  height: 16px;
  width: 16px;
  position: absolute;
  top: 50%;
  right: 1px;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  fill: #e4e4e4; }
.aa-dropdown-menu {
  background-color: #fff;
  border: 1px solid rgba(228, 228, 228, 0.6);
  // min-width: 300px;
  margin-top: 10px;
  box-sizing: border-box; 
  -moz-box-shadow:    0px 0px 5px 1px rgba($blue, 0.35);
  -webkit-box-shadow: 0px 0px 5px 1px rgba($blue, 0.35);
  box-shadow:         0px 0px 5px 1px rgba($blue, 0.35);
}
.aa-suggestion {
  padding: 12px;
  cursor: pointer;
}
.aa-suggestion + .aa-suggestion {
    border-top: 3px solid rgba(228, 228, 228, 0.6);
}
.aa-suggestion:hover, .aa-suggestion.aa-cursor {
    background-color: rgba(241, 241, 241, 0.35); }
.algolia__result-highlight{
  font-weight: bold;
}
.aa-suggestion.aa-cursor{
  background-color: rgba($blue, 0.1);
}
.aa-suggestion+.aa-cursor{
  background-color: rgba($blue, 0.1);
  border-top: 3px solid $blue;
}
 */

/* IMAGE GALLERY */

.kg-gallery-container{
  @apply grid grid-cols-2 gap-x-4 gap-y-8 sm:gap-x-6 xl:gap-x-8
}
.kg-gallery-image{
  @apply block w-full aspect-video rounded overflow-hidden mb-8 sm:mb-6 xl:mb-8 bg-daiLightGray
}
div.kg-gallery-image img{
  margin-top: 0px;
  margin-bottom: 0px; 
}
.kg-bookmark-card{
  @apply p-4 border-[1px] border-daiLightGray
}
.kg-bookmark-card .kg-bookmark-container{
  text-decoration: none;
  @apply grid grid-cols-2 gap-x-4 gap-y-8 sm:gap-x-6 xl:gap-x-8
}
.kg-bookmark-card .kg-bookmark-thumbnail img{
  margin-top: 0;
  margin-bottom: 0;
}
.kg-bookmark-container .kg-bookmark-content .kg-bookmark-title{
  @apply font-bold mb-2
}
.kg-bookmark-metadata img.kg-bookmark-icon{
  @apply w-4 h-4 mt-2 mb-0
}
.kg-bookmark-container .kg-bookmark-content{
  @apply text-daiDark font-normal text-base
}
.kg-button-card a{
  text-decoration: none;

  @apply daiButtons
}
.kg-button-card a:hover{
  color: white;
}
.kg-file-card .kg-file-card-container{
  @apply flex p-4 border-[1px] border-daiLightGray no-underline
}
.kg-file-card-container .kg-file-card-icon{
  margin-left: auto;
  @apply self-center
}
.kg-file-card-container .kg-file-card-icon svg{
  @apply h-16 w-16
}
.kg-file-card-container .kg-file-card-contents svg{
  @apply flex-grow
}
.kg-file-card-container .kg-file-card-title{
  @apply text-lg font-bold
}
.kg-file-card-container .kg-file-card-caption{
  @apply mt-1 text-base text-daiDark font-normal
}
.kg-file-card-container .kg-file-card-metadata{
  @apply text-sm mt-1 text-daiDark 
}
.kg-card.kg-callout-card.kg-callout-card-grey{
  @apply p-8 bg-daiLightGray text-daiDark text-base
}
/* BOOKMARK */
/* <div class="flex">
  <div class="mr-4 flex-shrink-0 self-center">
    <svg class="h-16 w-16 border border-gray-300 bg-white text-gray-300" preserveAspectRatio="none" stroke="currentColor" fill="none" viewBox="0 0 200 200" aria-hidden="true">
      <path vector-effect="non-scaling-stroke" stroke-width="1" d="M0 0l200 200M0 200L200 0" />
    </svg>
  </div>
  <div>
    <h4 class="text-lg font-bold">Lorem ipsum</h4>
    <p class="mt-1">Repudiandae sint consequuntur vel. Amet ut nobis explicabo numquam expedita quia omnis voluptatem. Minus quidem ipsam quia iusto.</p>
  </div>
</div> */

.author-pic{
  position: relative;
  float: left;
}
.author-pic.i2{
  left: -10%;
}

.author-pic.i3{
  left: -20%;
}
.author-pic.i4{
  left: -30%;
} 
.episode-banner-pop{
}
.episode-banner-1{
  background-image: url('/assets/images/scaled-episode-1-banner.jpg');
  background-position: center;
  background-size: cover;
}
.episode-banner-2{
  background-image: url('/assets/images/scaled-episode-2-banner.jpg');
  background-position: center;
  background-size: cover;
}
.episode-banner-3{
  background-image: url('/assets/images/scaled-episode-3-banner.jpg');
  background-position: center;
  background-size: cover;
}
.episode-banner-4{
  background-image: url('/assets/images/scaled-episode-4-banner.jpg');
  background-position: center;
  background-size: cover;
}
.episode-banner-5{
  background-image: url('/assets/images/scaled-episode-5-banner.jpg');
  background-position: center;
  background-size: cover;
}
.filtered2 {
  filter: hue-rotate(15deg);
}
.filtered3 {
  filter: hue-rotate(25deg);
}
.filtered4 {
  filter: hue-rotate(35deg);
}
.filtered5 {
  filter: hue-rotate(45deg);
}
.filtered6 {
  filter: hue-rotate(80deg);
}

@media only screen and (max-width: 1200px) {
  .practice-episode-header{
    background: url('/assets/images/scaled-practice-background.jpg');
  }
}
@media only screen and (min-width: 1200px) {
  .practice-episode-header{
    background: url('/assets/images/scaled-header-logo-practice.jpg');
  }
}

